* [FIXED] #6989 Fix a deprecation warning being displayed when using PHP >8.0 - github pull request #67 by
                Mario Wehr <m.wehr@fh-kaernten.at>
* [FIXED] #6970 Fix download buttons getting disabled after pressing them
* [FEATURE] #6990 Remove checkmark activities marked as complete from calender and timeline -
                  github pull request 62 by Leo Dintner

3.11.2 (2021-07-30)
------------------
* [FEATURE] #6952 Implement webservices - github pull request #62 by Alexander Melem <alexander@melem-software.com>

3.11.1 (2021-06-10)
------------------
* [FIXED] #6944 Fixed not being able to see a course with both "checkmark" activity and a "recent activity" block.

3.11.0 (2021-05-19)
------------------
* [FEATURE] #6826 Add a dashboard similar to the one in mod_assign to the main page of checkmark
                  showing all key information of the open checkmark activity
* [FEATURE] #6829 Add filter in Submissions/Export to display users with or without a presentation grade
* [FEATURE] #6841 Add activity completion badges to the checkmark landing page
* [FEATURE] #6841 Implement a custom completion rule for the submission of a checkmark
* [FEATURE] #6833 Implement behat generator functions for submissions and grading
* [FEATURE] #6913 List "All" after "100" in the "Submissions shown per page" [github #52/pullrequest #53]
* [FIXED] #6830 Replace deprecated methods and strings with their successors

3.10.1 (2021-03-09)
------------------
* [FIXED] #6836 Fixed a bug causing error messages in checkmarks with active groups when using a MySQL
                database with version number 8 or higher


3.10.0 (2020-11-10)
------------------
* [FEATURE] #6685 Add the option to export every name fragment (e.g. firstname, lastname)
                  in a dedicated column. This is controlled by a checkbox to additional settings
* [FEATURE] #6680 Add unit tests to override dates feature (#6360)