@@ -103,7 +103,7 @@ $string['autograde_strmultiplesubmissions'] = '{$a} submissions';
 $string['autograde_stronesubmission'] = '1 submission';
 $string['autograde_strreq'] = 'Submissions which require a grade-update';
 $string['autogradebuttonstitle'] = 'Calculate submission-grades for checkmark {$a}';
-$string['autograde_confirm'] = 'You are about to update grades and feedback for <strong>{$a}</strong>. The former grades and feedback will be overwritten.';
+$string['autograde_confirm'] = 'You are about to update grades and feedback for <strong>{$a->total}</strong>. <strong>{$a->graded}</strong> former grades and feedback will be overwritten.';
 $string['autograde_confirm_continue'] = 'Are you shure you wan\'t to continue?';
 $string['autograde_error'] = 'An error occurred during auto-grading.';
 $string['autograde_failed'] = 'Auto-grading failed!';
