@@ -68,6 +68,8 @@ class checkmark {
     const FILTER_NO_PRESENTATIONGRADING = 11;
     /** FILER NO PRESENTATIONGRADING */
     const FILTER_GRADED = 12;
+    /** FILTER_SELECTED_GRADED */
+    const FILTER_SELECTED_GRADED = 13;
 
 
     /** DELIMITER Used to connect example-names, example-grades, submission-examplenumbers! */
@@ -1358,6 +1360,21 @@ class checkmark {
                          WHERE u.deleted = 0 AND u.id " . $sqluserids;
                 $params['checkmarkid'] = $this->checkmark->id;
                 break;
+            case self::FILTER_SELECTED_GRADED:
+                // Prepare list with selected users!
+                $usrlst = $selected;
+
+                list($sqluserids, $userparams) = $DB->get_in_or_equal($usrlst, SQL_PARAMS_NAMED, 'user');
+                $params = array_merge_recursive($params, $userparams);
+
+                $sql = "SELECT u.id, f.attendance
+                          FROM {user} u
+                     LEFT JOIN {checkmark_feedbacks} f ON u.id = f.userid AND f.checkmarkid = :checkmarkid
+                     LEFT JOIN {checkmark_submissions} s ON (u.id = s.userid) AND s.checkmarkid = f.checkmarkid
+                         WHERE u.deleted = 0 AND u.id " . $sqluserids .
+                        "AND COALESCE(f.timemodified,0) >= COALESCE(s.timemodified,0) AND f.timemodified IS NOT NULL";
+                $params['checkmarkid'] = $this->checkmark->id;
+                break;
             case self::FILTER_REQUIRE_GRADING:
                 $wherefilter = ' AND (COALESCE(f.timemodified,0) < COALESCE(s.timemodified,0)) ';
                 $sql = "  SELECT u.id, f.attendance
@@ -1813,7 +1830,10 @@ class checkmark {
 
                     // Now all the grading stuff!
                     if (in_array($bulkaction, array('setattendantandgrade', 'setabsentandgrade', 'grade'))) {
-                        if (!optional_param('confirm', 0, PARAM_BOOL)) {
+                        $result = $this->autograde_submissions(self::FILTER_SELECTED, $selected, true);
+                        $result_graded = $this->autograde_submissions(self::FILTER_SELECTED_GRADED,
+                                $selected, true);
+                        if (!optional_param('confirm', 0, PARAM_BOOL) && $result_graded != 0) {
                             $PAGE->set_title(format_string($this->checkmark->name, true));
                             $PAGE->set_heading($this->course->fullname);
                             if (!isset($SESSION->checkmark)) {
@@ -1823,7 +1843,6 @@ class checkmark {
                                 $SESSION->checkmark->autograde = new stdClass();
                             }
                             $SESSION->checkmark->autograde->selected = $selected;
-                            $result = $this->autograde_submissions(self::FILTER_SELECTED, $selected, true);
                             if ($result == 1) {
                                 $amount = get_string('autograde_stronesubmission', 'checkmark');
                             } else {
@@ -1842,16 +1861,18 @@ class checkmark {
                                 } else if (in_array($bulkaction, ['setattendantandgrade', 'setabsentandgrade'])) {
                                     $amount = count($selected);
                                 }
-                                echo $OUTPUT->header();
-                                $confirmboxcontent = $OUTPUT->notification(get_string('autograde_confirm', 'checkmark', $amount) .
-                                                html_writer::empty_tag('br') . $amountinfo, 'info') .
-                                        $OUTPUT->confirm(get_string('autograde_confirm_continue', 'checkmark'),
-                                                'submissions.php?id=' . $this->cm->id . '&bulk=1&bulkaction=' .
-                                                $bulkaction . '&confirm=1',
-                                                'submissions.php?id=' . $this->cm->id);
-                                echo $OUTPUT->box($confirmboxcontent, 'generalbox');
-                                echo $OUTPUT->footer();
-                                die();
+                                    echo $OUTPUT->header();
+                                    $confirmboxcontent =
+                                            $OUTPUT->notification(get_string('autograde_confirm', 'checkmark',
+                                                    ['total' => $amount, 'graded' => $result_graded]) .
+                                                    html_writer::empty_tag('br') . $amountinfo, 'info') .
+                                            $OUTPUT->confirm(get_string('autograde_confirm_continue', 'checkmark'),
+                                                    'submissions.php?id=' . $this->cm->id . '&bulk=1&bulkaction=' .
+                                                    $bulkaction . '&confirm=1',
+                                                    'submissions.php?id=' . $this->cm->id);
+                                    echo $OUTPUT->box($confirmboxcontent, 'generalbox');
+                                    echo $OUTPUT->footer();
+                                    die();
                             }
                         } else {
                             if (($this->checkmark->grade <= 0)) {
@@ -2174,6 +2195,10 @@ class checkmark {
                 echo 'something seriously is wrong!!';
                 break;
         }
+    }
+
+    protected function check_if_graded_and_feedbacked($userids) {
+        global $DB;
     }
 
     /**
